16X16 grid created by JavaScript when page loads.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 </header>
 
 <body>
-  
 
-  <script src="scripts/main.js"></script>
- 
+	<div id="grid">
+		
+	</div>
+
+	<script src="scripts/main.js"></script>
 
 </body>
 
